--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,70 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
-<a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-</a>
-<tr *ngFor="let item of itemsList" style="">
-    
-    <td id="carouselExample" class="carousel slide" data-ride="carousel" data-interval="9000">
-        <div class="carousel-inner row w-100 mx-auto" role="listbox">
-            <div class="carousel-item col-md-7  active">
-               <div class="panel panel-default">
-                  <div class="panel-thumbnail">
-                    <a href="#" title="{{item.description}}" class="thumb">
-                      <img class="img-fluid mx-auto d-block" src="{{item.imageUrl}}" alt="{{item.description}}">
-                    </a>
-                    <div>{{item.shortDesc}}</div>  
-                    <div>$ {{item.unitCost}}</div>  
+<html>
+   <head>
+      <title>Top Trending Items</title>
+      <script src=
+         "http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+      <style>
+         table, th , td {
+         border: 1px solid grey;
+         border-collapse: collapse;
+         padding: 5px;
+         }
+         table tr:nth-child(odd) {
+         background-color: #f2f2f2;
+         }
+         table tr:nth-child(even) {
+         background-color: #ffffff;
+         }
+         .MultiCarousel { float: left; overflow: hidden; padding: 15px; width: 100%; position:relative; }
+         .MultiCarousel .MultiCarousel-inner { transition: 1s ease all; float: left; }
+         .MultiCarousel .MultiCarousel-inner .item { float: left;}
+         .MultiCarousel .MultiCarousel-inner .item > div { text-align: center; padding:10px; margin:10px; background:#f1f1f1; color:#666;}
+         .MultiCarousel .leftLst, .MultiCarousel .rightLst { position:absolute; border-radius:50%;top:calc(50% - 20px); }
+         .MultiCarousel .leftLst { left:0; }
+         .MultiCarousel .rightLst { right:0; }
+         .MultiCarousel .leftLst.over, .MultiCarousel .rightLst.over { pointer-events: none; background:#ccc; }
+          
+          p {
+            display: block;
+            margin-top: 1em;
+            margin-bottom: 1em;
+            margin-left: 0;
+            margin-right: 0;
+        }
+      </style>
+   </head>
+   <body>
+      <h1>Top Trending Items</h1>
+      
+         <p style="text-align: center">See all >></p>
+         <div class="container">
+            <div class="row">
+               <div class="MultiCarousel" data-items="1,3,5,6" data-slide="1" id="MultiCarousel"  data-interval="1000">
+                  <div class="MultiCarousel-inner">
+                     <table  border='0'  >
+                        <tr class="carousel-inner row mx-auto">
+                           <td  *ngFor="let item of itemsList"  >
+                              <div class="carousel-item col-md-7">
+                                 <div class="panel-thumbnail">
+                                     <a href="#" class="thumb">
+                                      <img width="250px;" height="250px;" class="img-fluid d-block" src="{{item.imageUrl}}" alt="{{item.description}}">
+                                    </a> 
+                                     <div>${{item.unitCost}}</div>
+                                    <div>${{item.shortDesc}}</div>
+                                 </div>
+                              </div>
+                           </td>
+                        </tr>
+                     </table>
                   </div>
-                </div>
+                  <button class="btn btn-primary leftLst"><</button>
+                  <button class="btn btn-primary rightLst">></button>   
+               </div>
             </div>
-        </div>
-    </td>
-</tr>
-
-
-<a class="carousel-control-next text-faded" href="#carouselExample" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-</a>
+         </div>
+      
+   </body>
+</html>
