[Datta]-"Updated for fetching items by zipcode"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<nav>
-  <a routerLink="/items">Trending Itmes</a>
-  <a routerLink="/geoItems">Geo Items</a>
+<nav style="padding-left: 100px; padding-top: 30px;">
+  <a routerLink="/items">Trending Items</a> || 
+  <a routerLink="/geoItems">Geo Location Items</a>
 </nav>
 <router-outlet></router-outlet>
