--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -36,10 +36,9 @@
         }
       </style>
    </head>
-   <body>
-      <h1>Top Trending Items</h1>
+   <body style="padding-left: 100px; padding-top: 30px;">
+      <h2>Top Trending Items</h2>
       <router-outlet></router-outlet>
-         <p style="text-align: center">See all >></p>
          <div class="container">
             <div class="row">
                <div class="MultiCarousel" data-items="1,3,5,6" data-slide="1" id="MultiCarousel"  data-interval="1000">
