--- a/src/app/geo-item-list/geo-item-list.component.html
+++ b/src/app/geo-item-list/geo-item-list.component.html
@@ -36,13 +36,20 @@
         }
       </style>
    </head>
-   <body>
-      <h1>Top Trending Items</h1>
+   <body style="padding-left: 100px; padding-top: 30px;">
+      <div class="row">
+        <div>
+          <h2>{{title}}</h2>
+        </div>
+        <div style="padding-left:80%;">
+          <input (ngModel)="zipCode" placeholder="Postal Code" [maxLength]="6" />
+          <input type="button" name="Submit" value="Submit" (click)="getTrendingItems(zipCode)">
+        </div>
+      </div>
       <router-outlet></router-outlet>
-         <p style="text-align: center">See all >></p>
          <div class="container">
             <div class="row">
-               <div class="MultiCarousel" data-items="1,3,5,6" data-slide="1" id="MultiCarousel"  data-interval="1000">
+               <div class="MultiCarousel" data-items="1,3,5,6" data-slide="1" id="MultiCarousel" >
                   <div class="MultiCarousel-inner">
                      <table  border='0'  >
                         <tr class="carousel-inner row mx-auto">
